# crew_ai_agent_dev

./: .gitignore
parallel-demo/: README.md  pyproject.toml
parallel-demo/src/parallel_demo/: __init__.py  crew.py  main.py
parallel-demo/src/parallel_demo/config/: agents.yaml  tasks.yaml
simple_test/: CONFIG.md  test.py
test_create_project/: README.md  pyproject.toml  run_crew.py  social_media_report.md
test_create_project/src/test_create_project/: crew.py  main.py
test_create_project/src/test_create_project/config/: agents.yaml  tasks.yaml
