[project]
name = "test_create_project"
version = "0.1.0"
description = "test_create_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
test_create_project = "test_create_project.main:run"
run_crew = "test_create_project.main:run"
train = "test_create_project.main:train"
replay = "test_create_project.main:replay"
test = "test_create_project.main:test"
run_with_trigger = "test_create_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
